added fonts and changed display font sizes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Barlow Semi Condensed';
+  src: url('/assets/fonts/BarlowSemiCondensed-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Goldman';
+  src: url('/assets/fonts/Goldman-Regular.ttf');
+}
